log
Thu May  5 15:20:04 UTC 2022: 
 heap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
24172e5
Thu May  5 15:24:05 UTC 2022: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
aa54b28
Thu May  5 15:26:42 UTC 2022: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
dd92295
Thu May  5 15:29:19 UTC 2022: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
7edd822
Thu May  5 15:30:06 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
c0526fe
Thu May  5 15:51:17 UTC 2022: 
 heap.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b3ebd53
Thu May  5 15:56:06 UTC 2022: 
 heap.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  2|2
total_score: 20/70
474003b
Thu May  5 15:56:45 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
6f02425
Thu May  5 16:02:03 UTC 2022: 
 heap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  4|2
total_score: 30/70
143d8f2
Thu May  5 16:03:07 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
0569d7d
Thu May  5 16:04:20 UTC 2022: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|2
total_score: 35/70
3a18d70
Thu May  5 16:07:48 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:43:84: error: expected ‘)’ before ‘;’ token
     pq->heapArray = (heapElem*) realloc(pq->heapArray, (pq->capac)*sizeof(heapElem);
                                                                                    ^
heap.c:44:3: error: expected ‘;’ before ‘}’ token
   }
   ^
Compilation failed
41e9966
Thu May  5 16:08:07 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
64887d2
Thu May  5 16:10:37 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
b5eadfc
Thu May  5 23:13:28 UTC 2022: 
 heap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:75:11: error: stray ‘\303’ in program
   int tamaño = pq->size;
           ^
heap.c:75:12: error: stray ‘\261’ in program
   int tamaño = pq->size;
            ^
heap.c:75:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘o’
   int tamaño = pq->size;
             ^
heap.c:75:13: error: ‘o’ undeclared (first use in this function)
heap.c:75:13: note: each undeclared identifier is reported only once for each function it appears in
heap.c:76:36: error: stray ‘\303’ in program
   int auxPrior = pq->heapArray[tamaño-1].priority;
                                    ^
heap.c:76:37: error: stray ‘\261’ in program
   int auxPrior = pq->heapArray[tamaño-1].priority;
                                     ^
heap.c:76:32: error: ‘tama’ undeclared (first use in this function); did you mean ‘tanl’?
   int auxPrior = pq->heapArray[tamaño-1].priority;
                                ^~~~
                                tanl
heap.c:76:38: error: expected ‘]’ before ‘o’
   int auxPrior = pq->heapArray[tamaño-1].priority;
                                      ^
heap.c:77:37: error: stray ‘\303’ in program
   void *auxData = pq->heapArray[tamaño-1].data;
                                     ^
heap.c:77:38: error: stray ‘\261’ in program
   void *auxData = pq->heapArray[tamaño-1].data;
                                      ^
heap.c:77:39: error: expected ‘]’ before ‘o’
   void *auxData = pq->heapArray[tamaño-1].data;
                                       ^
heap.c:79:21: error: stray ‘\303’ in program
   pq->heapArray[tamaño-1].priority = pq->heapArray[i].priority;
                     ^
heap.c:79:22: error: stray ‘\261’ in program
   pq->heapArray[tamaño-1].priority = pq->heapArray[i].priority;
                      ^
heap.c:79:23: error: expected ‘]’ before ‘o’
   pq->heapArray[tamaño-1].priority = pq->heapArray[i].priority;
                       ^
heap.c:80:21: error: stray ‘\303’ in program
   pq->heapArray[tamaño-1].data = pq->heapArray[i].data;
                     ^
heap.c:80:22: error: stray ‘\261’ in program
   pq->heapArray[tamaño-1].data = pq->heapArray[i].data;
                      ^
heap.c:80:23: error: expected ‘]’ before ‘o’
   pq->heapArray[tamaño-1].data = pq->heapArray[i].data;
                       ^
Compilation failed
84f6989
Thu May  5 23:13:50 UTC 2022: 
 heap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 45/70
0f1600b
Thu May  5 23:16:06 UTC 2022: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 45/70
71770ed
